<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/AppTheme"
    android:padding="16dp">

    <TextView
        android:id="@+id/createhabit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/crie_o_titulo_do_habito"
        android:text="@string/defina_o_seu_habito"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/defina_o_seu_habito"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createhabit">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/createhabitlocal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/crie_o_titulo_do_habito"
        android:text="@string/habit_description"
        android:paddingTop="12dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextName" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextName2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/o_que_vai_fazer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createhabitlocal">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextName2"
        app:singleLine="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/domingo" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipMonday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/segunda_feira" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipTuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terca_feira" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipWednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quarta_feira" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipThusday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quinta_feira" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipFriday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sexta_feira" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSaturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sabado" />

    </com.google.android.material.chip.ChipGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:text="@string/criar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

